Fix width too large

--- a/src/components/Toast.css
+++ b/src/components/Toast.css
@@ -1,5 +1,5 @@
 .toast {
-	width: calc(100% - 8px);
+	width: calc(100% - 16px);
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
